--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "img/favicon.ico",
+      "src": "img/favicon.png",
       "type": "image/png",
       "sizes": "48x48"
     }
