--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,5 @@
   "name": "TheoryJSjQDOMs55",
   "short_name": "TheoryJS",
   "start_url": "index.html",
-  "display": "standalone",
+  "display": "standalone"
 }
