--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,44 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "img/favicon.png",
+      "src": "favicon.png",
       "type": "image/png", 
+      "sizes": "72x72"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png",
       "sizes": "96x96"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "128x128"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "152x152"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "384x384"
+    }, 
+    {
+      "src": "favicon.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
